feat: e-ticaret stok ve mikroservis altyapısına Saga Pattern & Ödeme Simülasyonu eklendi
